plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.mn'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	runtimeOnly 'org.postgresql:postgresql'

	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: "${jwt_version}"
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: "${jwt_version}"
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: "${jwt_version}"

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.0'

	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	// feign
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.2.1'
	implementation 'io.github.openfeign:feign-okhttp:13.6'
	implementation 'io.github.openfeign:feign-httpclient:13.6'


	// Testingspring-security-test:6.4.6
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
